<resources>
    <string name="app_name">ISM Student</string>
    <string-array name="list">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
    </string-array>
    <string-array name="accordion_notice">
        <item>NOTICE</item>
        <item>HIGH SCORE</item>
    </string-array>
    <string-array name="chat">
        <item>STUDYMATES</item>
        <item>MY TEACHER</item>
    </string-array>
    <string-array name="studymate_options">
        <item>@string/options</item>
        <item>@string/block_studymate</item>
        <item>@string/remove_studymate</item>
    </string-array>
    <string-array name="accordion_sections">
        <item>HIGH SCORE</item>
        <item>STUDYMATES</item>
        <item>SUGGESTED STUDYMATES</item>
        <item>FIND MORE STUDYMATES</item>
        
    </string-array>
    <string-array name="notice_sortby">
        <item>Sort By</item>
        <item>Name Ascending</item>
        <item>Name Descending</item>
        <item>Latest First</item>
        <item>Oldest First</item>
    </string-array>
    <string-array name="testing_array">
        <item>ListItem 1</item>
        <item>ListItem 2</item>
        <item>ListItem 3</item>
        <item>ListItem 4</item>
        <item>ListItem 5</item>
        <item>ListItem 6</item>
        <item>ListItem 7</item>
        <item>ListItem 8</item>
        <item>ListItem 9</item>
        <item>ListItem 10</item>
        <item>ListItem 11</item>
        <item>ListItem 12</item>
        <item>ListItem 13</item>
        <item>ListItem 14</item>
        <item>ListItem 15</item>
        <item>ListItem 16</item>
        <item>ListItem 17</item>
        <item>ListItem 18</item>
        <item>ListItem 19</item>
        <item>ListItem 20</item>
        <item>ListItem 21</item>
        <item>ListItem 22</item>
        <item>ListItem 23</item>
        <item>ListItem 24</item>
        <item>ListItem 25</item>
        <item>ListItem 26</item>
        <item>ListItem 27</item>
        <item>ListItem 28</item>
        <item>ListItem 29</item>
        <item>ListItem 30</item>
    </string-array>
    <string name="classwall">Classwall</string>
    <string name="lesson_notes">Lesson Notes</string>
    <string name="assignment">Assignment</string>
    <string name="exam">Exam</string>
    <string name="ism_mock">ISM Mock</string>
    <string name="wassce">Wassce</string>
    <string name="end_of_term">End of Term</string>
    <string name="jotter">Jotter</string>
    <string name="favorite">Favorite</string>
    <string name="timetable">Timetable</string>
    <string name="books">Books</string>
    <string name="forum">Forum</string>
    <string name="progress_report">Progress Report</string>
    <string name="add_notes">Add Notes</string>
    <string name="add_new_favorite">Add new Favorite</string>
    <string name="notes">Notes</string>
    <string name="assignments">Assignments</string>
    <string name="links">Links</string>
    <string name="events">Events</string>
    <string name="Authors">Authors</string>
    <string name="add_question">Add Question</string>
    <string name="add_book">Add Book</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="strrememberme">Remember Me</string>
    <string name="strlogin">LOGIN</string>
    <string name="strforgotpwd"><u>Forgot Password</u></string>
    <string name="strdonothavecredentials">Do Not Have Credentials, </string>
    <string name="strclickhereu"><u>Click Here</u></string>
    <string name="strprofileinformation">PROFILE INFORMATION</string>
    <string name="stremailaddress">Email Address</string>
    <string name="strgender">Gender</string>
    <string name="strfullname">Full Name</string>
    <string name="strhomeaddress">Home Address</string>
    <string name="strstate">State</string>
    <string name="strcity">City</string>
    <string name="strcountry">Country</string>
    <string name="strdateofbirth">Date of Birth</string>
    <string name="strcontactnumber">Contact Number</string>
    <string name="strage">Age</string>
    <string name="struploadprofilepicture">UPLOAD PROFILE PICTURE</string>
    <string name="strschoolinformation">SCHOOL INFORMATION</string>
    <string name="stryouareregisteredforfollowingschool">You are registered for following school.</string>
    <string name="strifitisnotyourschool">If it\'s not your school.</string>
    <string name="strnameofschool">Name of School</string>
    <string name="strclass">Class</string>
    <string name="stracademicyear">Academic Year</string>
    <string name="strdistrictofschool">District of School</string>
    <string name="strprogramcourse">Program/ Course</string>
    <string name="strclickhere">Click Here</string>
    <string name="strmanageaccount">MANAGE ACCOUNT</string>
    <string name="strusername">Username</string>
    <string name="strcurrentpwd">Current Password</string>
    <string name="strnewpwd">New Password</string>
    <string name="strconfirmpwd">Confirm Password</string>
    <string name="strsubmit">Submit</string>
    <string name="strcancel">Cancel</string>
    <string name="welcome_msg">Your tutorial group being processed \n and will be available to you for confirmation </string>
    <string name="striacceptedgroup">I ACCEPT GROUP</string>
    <string name="strwriteyourcommenthere">Write Your Comment Here</string>
    <string name="strsentence">Lorem ipsum dolor sit amet.consectectur adipisicing elit. perspiciatis praesentium quaerat repudiandae soluta? Cum doloribus esses et eum facilis impedit officiis omnis optio. placeat, quia quo reprehenderit sunt velit?Lorem ipsum dolor sit amet.consectectur adipisicing elit. perspiciatis praesentium quaerat repudiandae soluta? Cum doloribus esses et eum facilis impedit officiis omnis optio. placeat, quia quo reprehenderit sunt velit?Lorem ipsum dolor sit amet.consectectur adipisicing elit. perspiciatis praesentium quaerat repudiandae soluta? Cum doloribus esses et eum facilis impedit officiis omnis optio. placeat, quia quo reprehenderit sunt velit?Lorem ipsum dolor sit amet.consectectur adipisicing elit. perspiciatis praesentium quaerat repudiandae soluta? Cum doloribus esses et eum facilis impedit officiis omnis optio. placeat, quia quo reprehenderit sunt velit?</string>
    <string name="group_name">"Group Name : "</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="hint_search">Search</string>
    <string name="review_later">Review later</string>
    <string name="clear_response">Clear response</string>
    <string name="skip">Skip</string>
    <string name="save_n_next">Save and next</string>
    <string name="start_test">Start test</string>
    <string name="required">Required!</string>
    <string name="error_password_length">Minimum 8 characters required!</string>
    <string name="error_confirm_password_mismatch">Confirm password mismatch!</string>
    <string name="error_same_old_new_password">Old and new passwords can\'t be same!</string>
    <string name="error_invalid_email">Invalid email address!</string>
    <string name="invalid_url">Invalid url!</string>
    <string name="password_sent">Password successfully sent to your email id.</string>
    <string name="email_not_found">Email id not found!</string>
    <string name="strpost">Post</string>
    <string name="strcreatepost">Create Post</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strviewall">View all</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="android">Android</string>
    <string name="gotrending">Go Trending</string>
    <string name="setquiz">Set Quiz</string>
    <string name="settrial">Set Trial</string>
    <string name="stradd">ADD</string>
    <string name="straddnew">ADD NEW</string>
    <string name="select">Select</string>
    <string name="ok">Ok</string>
    <string name="msg_validation_set_dp"><![CDATA[> Please set your Profile picture.]]></string>
    <string name="msg_validation_country"><![CDATA[\n> Please select your country.]]></string>
    <string name="msg_validation_state"><![CDATA[\n> Please select your state.]]></string>
    <string name="msg_validation_city"><![CDATA[\n> Please select your city.]]></string>
    <string name="msg_validation_gender"><![CDATA[\n> Please select your gender.]]></string>
    <string name="msg_validaton_dob"><![CDATA[\n> Please set your date of birth.]]></string>
    <string name="msg_wrong_current_pwd">Wrong current password.</string>
    <string name="registration_failed">Registration failed</string>
    <string name="msg_email_exists">Email id already exists.</string>
    <string name="msg_username_exists">Username already exists.</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="tutorial_group_description"><![CDATA[Tutorial group is 5 members group of randomly<br>selected students, put together to <font color=\'#81D525\'>share ideas,</font><br><font color=\'#CC89EA\'>collaborate</font> and <font color=\'#F5A438\'>do assignments.</font>]]></string>
    <string name="msg_offline">You are offline!\nPlease check your internet connection.</string>
    <string name="msg_tutorial_group_pending">Your Tutorial group will be created as soon as other members join.</string>
    <string name="msg_waiting_for_other_members">Group is not yet complete. Waiting for other members to join.</string>
    <string name="view_all">View All</string>
    <string name="comment">Comment</string>
    <string name="msg_failed_comment">Failed to post comment!, please try again.</string>
    <string name="strsearchstudymatess">Search Study Mates</string>
    <string name="title_forgot_password">Password will be sent to your email id.</string>
    <string name="processing">Processing</string>
    <string name="done">Done</string>
    <string name="strclose">Close</string>
    <string name="strcomments">Comments</string>
    <string name="read_more">Read more</string>
    <string name="add_post">Add Post</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="general_settings">General Settings</string>
    <string name="my_feeds">My Feeds</string>
    <string name="studymates">Studymates</string>
    <string name="my_activity">My Activity</string>
    <string name="my_wallet">My Wallet</string>
    <string name="strBlockUser">Block User</string>
    <string name="strPrivacySetting">Privacy Setting</string>
    <string name="strNotification">Notification</string>
    <string name="strSmsAlerts">SMS ALerts</string>
    <string name="strAssignments">Assignments</string>
    <string name="strBooks">Books</string>
    <string name="strAboutMe">About Me</string>
    <string name="generate_coupon">Generate coupon</string>
    <string name="generated_coupon">Generated coupon</string>
    <string name="msg_generate_coupon">You can generate the coupon with amount less than wallet balance and use it in ISM Store</string>
    <string name="enter_coupon_amount">Enter Coupon Amount:</string>
    <string name="generate">Generate</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="people">People</string>
    <string name="school">School</string>
    <string name="area">Area</string>
    <string name="course">Course</string>
</resources>