<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ism.fragment.TutorialFragment">

    <TextView
        android:id="@+id/text_week_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:background="@color/bg_tutorial"
	    android:textColor="@android:color/white"
	    android:textAllCaps="true"
	    android:gravity="center"/>

	<LinearLayout
		android:id="@+id/layout_week_days"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_below="@id/text_week_number">

		<TextView
			android:id="@+id/text_monday"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/monday"
			android:textAllCaps="true"
			android:textColor="@drawable/color_week_day_text"
			android:gravity="center"
			android:paddingTop="@dimen/week_day_padding"
			android:paddingBottom="@dimen/week_day_padding"
			android:background="@drawable/bg_week_day"/>
		<TextView
			android:id="@+id/text_tuesday"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/tuesday"
			android:textAllCaps="true"
			android:textColor="@drawable/color_week_day_text"
			android:gravity="center"
			android:paddingTop="@dimen/week_day_padding"
			android:paddingBottom="@dimen/week_day_padding"
			android:background="@drawable/bg_week_day"/>
		<TextView
			android:id="@+id/text_wednesday"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/wednesday"
			android:textAllCaps="true"
			android:textColor="@drawable/color_week_day_text"
			android:gravity="center"
			android:paddingTop="@dimen/week_day_padding"
			android:paddingBottom="@dimen/week_day_padding"
			android:background="@drawable/bg_week_day"/>
		<TextView
			android:id="@+id/text_thursday"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/thursday"
			android:textAllCaps="true"
			android:textColor="@drawable/color_week_day_text"
			android:gravity="center"
			android:paddingTop="@dimen/week_day_padding"
			android:paddingBottom="@dimen/week_day_padding"
			android:background="@drawable/bg_week_day"/>
		<TextView
			android:id="@+id/text_friday"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/friday"
			android:textAllCaps="true"
			android:textColor="@drawable/color_week_day_text"
			android:gravity="center"
			android:paddingTop="@dimen/week_day_padding"
			android:paddingBottom="@dimen/week_day_padding"
			android:background="@drawable/bg_week_day"/>
		<TextView
			android:id="@+id/text_saturday"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/saturday"
			android:textAllCaps="true"
			android:textColor="@drawable/color_week_day_text"
			android:gravity="center"
			android:paddingTop="@dimen/week_day_padding"
			android:paddingBottom="@dimen/week_day_padding"
			android:background="@drawable/bg_week_day"/>
		<TextView
			android:id="@+id/text_sunday"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/sunday"
			android:textAllCaps="true"
			android:textColor="@drawable/color_week_day_text"
			android:gravity="center"
			android:paddingTop="@dimen/week_day_padding"
			android:paddingBottom="@dimen/week_day_padding"
			android:background="@drawable/bg_week_day"/>
	</LinearLayout>

	<FrameLayout
		android:id="@+id/frame_tutorial"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/layout_week_days"></FrameLayout>

</RelativeLayout>
