<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="20dp">

		<EditText
			android:id="@+id/et_firstname"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/first_name"
			android:inputType="textPersonName"
			android:nextFocusDown="@+id/et_lastname"
			android:background="@drawable/selector"
			android:padding="20dp"
			android:textSize="@dimen/controller_top_menu_text_size"/>

		<EditText
			android:id="@+id/et_lastname"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:hint="@string/last_name"
			android:inputType="textPersonName"
			android:nextFocusDown="@+id/et_email"
			android:background="@drawable/selector"
			android:padding="20dp"
			android:textSize="@dimen/controller_top_menu_text_size"/>

		<EditText
			android:id="@+id/et_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:hint="@string/stremailaddress"
			android:inputType="textEmailAddress"
			android:nextFocusDown="@+id/sp_country"
			android:background="@drawable/selector"
			android:padding="20dp"
			android:textSize="@dimen/controller_top_menu_text_size"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:orientation="horizontal">

			<Spinner
				android:id="@+id/sp_country"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginRight="@dimen/d5dp"
				android:layout_weight="1"
				android:nextFocusRight="@+id/sp_state"
				android:background="@drawable/spinner_selector"
				android:padding="@dimen/d20dp"/>

			<Spinner
				android:id="@+id/sp_state"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginRight="@dimen/d5dp"
				android:layout_weight="1"
				android:nextFocusRight="@+id/sp_city"
				android:background="@drawable/spinner_selector"
				android:padding="@dimen/d20dp"/>

			<Spinner
				android:id="@+id/sp_city"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:nextFocusDown="@+id/et_home_address"
				android:background="@drawable/spinner_selector"
				android:padding="@dimen/d20dp"/>

		</LinearLayout>

		<EditText
			android:id="@+id/et_home_address"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:hint="@string/strhomeaddress"
			android:inputType="textPostalAddress"
			android:nextFocusDown="@+id/et_school_name"
			android:background="@drawable/selector"
			android:padding="20dp"
			android:textSize="@dimen/controller_top_menu_text_size"/>

		<EditText
			android:id="@+id/et_school_name"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:hint="@string/strnameofschool"
			android:inputType="textPersonName"
			android:nextFocusDown="@+id/et_contactNo"
			android:background="@drawable/selector"
			android:padding="20dp"
			android:textSize="@dimen/controller_top_menu_text_size"/>

		<EditText
			android:id="@+id/et_contactNo"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:hint="@string/strcontactnumber"
			android:inputType="phone"
			android:background="@drawable/selector"
			android:padding="20dp"
			android:textSize="@dimen/controller_top_menu_text_size"/>
	</LinearLayout>
</ScrollView>