<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="@color/gray_light"
                tools:mContext=".fragment.userprofile.MyWalletFragment">

	<ImageView
		android:id="@+id/img_wallet"
		android:layout_width="@dimen/d150dp"
		android:layout_height="@dimen/d150dp"
		android:layout_centerHorizontal="true"
		android:src="@drawable/img_wallet"
		android:layout_marginTop="@dimen/d25dp"
		android:layout_marginBottom="@dimen/d15dp"/>

	<TextView
		android:id="@+id/txt_wallet_balance"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/img_wallet"
		android:textSize="@dimen/d35sp"
		android:layout_marginBottom="@dimen/d10dp"
		android:gravity="center"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/txt_wallet_balance"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:gravity="center_horizontal"
			android:orientation="vertical"
			android:background="@android:color/white">

			<TextView
				android:id="@+id/txt_generate_voucher"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/bg_wallet_head"
				android:text="@string/generate_coupon"
				android:textAllCaps="true"
				android:textColor="@color/green"
				android:textSize="@dimen/d20sp"
				android:padding="@dimen/d10dp"/>

			<TextView
				android:id="@+id/txt_generate_voucher_msg"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/msg_generate_coupon"
				android:textColor="@color/bg_app_dark"
				android:textSize="@dimen/d18sp"
				android:padding="@dimen/d15dp"/>

			<TextView
				android:id="@+id/txt_enter_amount"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/d30dp"
				android:layout_marginLeft="@dimen/d10dp"
				android:text="@string/enter_coupon_amount"
				android:textColor="@color/bg_app_dark"
				android:textSize="@dimen/d18sp"
				android:textStyle="bold"/>

			<EditText
				android:id="@+id/edit_voucher_amount"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/d10dp"
				android:inputType="numberDecimal"
				android:textSize="@dimen/d25sp"
				android:textColor="@color/bg_app_dark"
				android:background="@drawable/shape_edit_shadowed"
				android:paddingTop="@dimen/d10dp"
				android:paddingBottom="@dimen/d10dp"
				android:paddingLeft="@dimen/d15dp"
				android:paddingRight="@dimen/d15dp"/>

			<com.ism.commonsource.view.ActionProcessButton
				android:id="@+id/btn_generate"
				android:layout_width="wrap_content"
				android:layout_height="@dimen/d50dp"
				android:layout_marginTop="@dimen/d30dp"
				android:paddingLeft="@dimen/d90dp"
				android:paddingRight="@dimen/d90dp"
				android:text="@string/generate"
				android:textColor="@color/color_white"
				android:textSize="@dimen/d20dp"
				app:pb_colorComplete="@color/blue"
				app:pb_colorNormal="@color/blue"
				app:pb_colorPressed="@color/blue"
				app:pb_colorProgress="@color/blue_dark"
				app:pb_cornerRadius="@dimen/app_button_corner_radius"
				app:pb_textComplete="@string/generate"
				app:pb_textProgress="@string/processing" />
		</LinearLayout>

		<View
			android:layout_width="@dimen/d1dp"
			android:layout_height="match_parent"
			android:background="@color/border_my_wallet"/>

		<RelativeLayout
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1">

			<TextView
				android:id="@+id/txt_generate_voucher2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/bg_wallet_head"
				android:text="@string/generated_coupon"
				android:textAllCaps="true"
				android:textColor="@color/green"
				android:textSize="@dimen/d20sp"
				android:padding="@dimen/d10dp"/>

			<LinearLayout
				android:id="@+id/ll_labels"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:background="@color/bg_wallet_head"
				android:layout_below="@id/txt_generate_voucher2"
				android:padding="@dimen/d5dp">

				<TextView
					android:id="@+id/txt_voucher_code"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/coupon_code"
					android:gravity="center"
					android:textColor="@android:color/white"
					android:textSize="@dimen/d17sp"/>

				<TextView
					android:id="@+id/txt_date"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/date"
					android:gravity="center"
					android:textColor="@android:color/white"
					android:textSize="@dimen/d17sp"/>

				<TextView
					android:id="@+id/txt_amount"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/amount"
					android:gravity="center"
					android:textColor="@android:color/white"
					android:textSize="@dimen/d17sp"/>
			</LinearLayout>

			<ListView
				android:id="@+id/lv_voucher"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_below="@id/ll_labels"
				android:background="@android:color/white"></ListView>

			<TextView
				android:id="@+id/txt_emptylist_message"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_below="@id/ll_labels"
				android:gravity="center"
				android:text="@string/no_coupons_available"
				android:textSize="@dimen/text_size_emptylist_message_small"/>
		</RelativeLayout>
	</LinearLayout>

	<!--<View-->
		<!--android:id="@+id/view_highlighter_triangle"-->
		<!--android:layout_width="20dp"-->
		<!--android:layout_height="30dp"-->
		<!--android:layout_marginTop="478dp"-->
		<!--android:layout_alignParentRight="true"-->
		<!--android:visibility="gone"-->
		<!--android:background="@drawable/shape_triangle_profile_controller" />-->
</RelativeLayout>
