<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_transparent_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_general_notifiction_left"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_privacy_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/bg_general_setting_selected"
            android:padding="@dimen/d20dp"
            android:text="@string/strPrivacySetting"
            android:textColor="@color/color_dark_gray"
            android:textSize="@dimen/d20dp" />

        <TextView
            android:id="@+id/txt_sms_alerts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_privacy_setting"
            android:background="@drawable/bg_general_setting_unselected"
            android:padding="@dimen/d20dp"
            android:text="@string/strSmsAlerts"
            android:textColor="@color/color_dark_gray"
            android:textSize="@dimen/d20dp" />

        <TextView
            android:id="@+id/txt_block_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_sms_alerts"
            android:background="@drawable/bg_general_setting_unselected"
            android:padding="@dimen/d20dp"
            android:text="@string/strBlockUser"
            android:textColor="@color/color_dark_gray"
            android:textSize="@dimen/d20dp" />

        <TextView
            android:id="@+id/txt_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_block_users"
            android:background="@drawable/bg_general_setting_unselected"
            android:padding="@dimen/d20dp"
            android:text="@string/strNotification"
            android:textColor="@color/color_dark_gray"
            android:textSize="@dimen/d20dp" />
    </RelativeLayout>

</RelativeLayout>