<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:mContext=".fragment.userProfile.FindStudymatesFragment">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="50dp"
		android:background="@color/bg_green_light">

		<TextView
			android:id="@+id/txt_people"
			android:layout_width="@dimen/find_studymate_tag_width"
			android:layout_height="match_parent"
			android:text="@string/people"
			android:gravity="center"
			android:textAllCaps="true"
			android:textSize="18sp"
			android:background="@color/green"
			android:textColor="@android:color/white"/>

		<TextView
			android:id="@+id/txt_school"
			android:layout_width="@dimen/find_studymate_tag_width"
			android:layout_height="match_parent"
			android:text="@string/school"
			android:gravity="center"
			android:textAllCaps="true"
			android:textSize="18sp"
			android:layout_toRightOf="@id/txt_people"
			android:layout_marginLeft="1dp"
			android:background="@color/green"
			android:textColor="@android:color/white"/>

		<TextView
			android:id="@+id/txt_area"
			android:layout_width="@dimen/find_studymate_tag_width"
			android:layout_height="match_parent"
			android:text="@string/area"
			android:gravity="center"
			android:textAllCaps="true"
			android:textSize="18sp"
			android:layout_toRightOf="@id/txt_school"
			android:layout_marginLeft="1dp"
			android:background="@color/green"
			android:textColor="@android:color/white"/>

		<TextView
			android:id="@+id/txt_course"
			android:layout_width="@dimen/find_studymate_tag_width"
			android:layout_height="match_parent"
			android:text="@string/course"
			android:gravity="center"
			android:textAllCaps="true"
			android:textSize="18sp"
			android:layout_toRightOf="@id/txt_area"
			android:layout_marginLeft="1dp"
			android:background="@color/green"
			android:textColor="@android:color/white"/>

		<ImageView
			android:layout_width="70dp"
			android:layout_height="match_parent"
			android:src="@drawable/ic_search"
			android:layout_alignParentRight="true"
			android:background="@color/green"/>
	</RelativeLayout>

	<android.support.v7.widget.RecyclerView
		android:id="@+id/recycler_find_studymates"
		android:layout_width="match_parent"
		android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
</LinearLayout>
