<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:mContext="com.ism.fragment.myAuthor.authorDesk.AuthorDeskFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_alignParentTop="true"
        android:background="@drawable/shadow_separator"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_about_me"
            android:layout_width="@dimen/controller_desk_tab_width"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="@drawable/bg_tab_edit_profile"
            android:gravity="center"
            android:padding="@dimen/dp4"
            android:text="@string/strAboutMe"
            android:textColor="@drawable/text_tab_edit_profile"
            android:textSize="@dimen/sp15" />

        <TextView
            android:id="@+id/line1"
            android:layout_width="@dimen/dp1"
            android:layout_height="@dimen/dp38"
            android:layout_toRightOf="@+id/txt_about_me"
            android:background="#D9D9D9"
            android:gravity="center" />

        <TextView
            android:id="@+id/txt_assignments"
            android:layout_width="@dimen/controller_desk_tab_width"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/line1"
            android:background="@drawable/bg_tab_edit_profile"
            android:gravity="center"
            android:text="@string/strAssignments"
            android:textColor="@drawable/text_tab_edit_profile"
            android:textSize="@dimen/sp15" />

        <TextView
            android:id="@+id/line2"
            android:layout_width="@dimen/dp1"
            android:layout_height="@dimen/dp38"
            android:layout_toRightOf="@+id/txt_assignments"
            android:background="#D9D9D9"
            android:gravity="center" />

        <TextView
            android:id="@+id/txt_books"
            android:layout_width="@dimen/controller_desk_tab_width"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/line2"
            android:background="@drawable/bg_tab_edit_profile"
            android:gravity="center"
            android:text="@string/strBooks"
            android:textColor="@drawable/text_tab_edit_profile"
            android:textSize="@dimen/sp15" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"></FrameLayout>
</LinearLayout>